manifests/argocd-principal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-agent-principal
  namespace: hub-platform-ops
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd-principal.nutgraf.in
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd-principal.nutgraf.in
    secretName: argocd-principal-tls
  rules:
  - host: argocd-principal.nutgraf.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-agent-principal
            port:
              number: 8443
